# majiq_modified

./: .gitignore  Dockerfile  Dockerfile_commercial  Dockerfile_commercial_fromzip  README.md  bitbucket-pipelines.yml  generate_splice_graph.py  longreads2voila.py  pyproject.toml  setup.cfg  setup.py
doc/: Makefile
majiq/: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
majiq/rna_majiq/: CMakeLists.txt  run_majiq.py
majiq/rna_majiq/c/: splice_graph_sql.pxd  splice_graph_sql.pyx
majiq/rna_majiq/cmake/: FindHTSlib.cmake
majiq/rna_majiq/doc/source/: api.rst  citations.rst  conf.py  index.rst
majiq/rna_majiq/doc/source/_static/: style.css
majiq/rna_majiq/doc/source/getting-started-guide/: installing.rst  majiq-build.rst
majiq/rna_majiq/include/majiq/gufuncs/: CoreIt.hpp
majiq/rna_majiq/include/majiq/internals/: AnnotatedTranscripts.hpp  ConnectionData.hpp  Contig.hpp  ContigRegion.hpp  Contigs.hpp  Events.hpp  EventsAlign.hpp  EventsCoverage.hpp  ExonConnections.hpp  Exons.hpp  ExperimentThresholds.hpp  GFF3.cpp  GFF3.hpp  Gene.hpp  GeneConnections.hpp  GeneIntrons.hpp  GeneJunctions.hpp  GeneJunctionsAccumulator.hpp  GeneModules.hpp  GeneRegion.hpp  Genes.hpp  Interval.hpp  KnownFeatures.hpp  MajiqConstants.hpp  MajiqTypes.hpp  Meta.hpp  MinExperiments.hpp  PassedIntrons.hpp  PassedJunctions.hpp  Regions.hpp  SJBinsReads.cpp  SJBinsReads.hpp  SJIntrons.hpp  SJJunctions.hpp  SimplifierGroup.hpp  SpliceGraph.hpp  SpliceGraphMask.hpp  SpliceGraphReads.hpp  SpliceGraphValues.hpp  TranscriptModels.hpp  (+1 more)
majiq/rna_majiq/include/majiq/majiqinclude/: BetaMixture.hpp  DPsiDiscrete.hpp  LogMath.hpp  ResourcePool.hpp  histogram.hpp  quantile.hpp
majiq/rna_majiq/src/: build.pyx  calc_psi.pyx  config.py  constants.py  deltapsi.pyx  gff.py  indpnt.pyx  io.pxd  io.pyx
majiq/rna_majiq/src/internals/: grimoire.cpp  grimoire.hpp  grimoire.pxd  io_bam.cpp  io_bam.hpp  io_bam.pxd  psi.pxd
majiq/rna_majiq/src/rna_majiq/: __init__.py  _offsets.pyi  _stats.pyi  beta_mixture.pyi  constants.py  experiments.py  internals.pyi  logger.py  stats.py
majiq/rna_majiq/src/rna_majiq/_run/: _majiq_args.py  _run.py  build_args.py  build_combine.py  build_gff3.py  build_pipeline.py  build_update.py  cite.py  deltapsi.py  heterogen.py  legacy_explode_tsv.py  legacy_majiq.py  legacy_splicegraph.py  majiq_all.py  majiq_build.py  majiq_coverage.py  majiq_legacy.py  majiq_main.py  majiq_mendelian.py  majiq_quantify.py  moccasin.py  psi_controls.py  psi_coverage.py  psi_group.py  psi_outliers.py  quantify.py  sg_coverage.py  sg_coverage_summarize.py  shared_base_events.py  sj.py
majiq/rna_majiq/src/rna_majiq/core/: AnnotatedTranscripts.py  ContigRegions.py  Contigs.py  DPsiPrior.py  DeltaPsi.py  Events.py  EventsCoverage.py  ExonConnections.py  Exons.py  GFF3TypesMap.py  GeneConnections.py  GeneIntrons.py  GeneJunctions.py  GeneJunctionsAccumulator.py  GeneModules.py  GeneRegions.py  Genes.py  GroupIntronsGenerator.py  Heterogen.py  MixinHasEvents.py  MixinPsiInference.py  MixinSubsettablePrefixes.py  PMFSummaries.py  PassedJunctions.py  PsiControlsSummary.py  PsiCoverage.py  PsiGroup.py  PsiOutliers.py  Regions.py  SJBinsReads.py  SJExperiment.py  SJIntrons.py  SJIntronsBins.py  SJJunctions.py  SJJunctionsBins.py  SimplifierGroup.py  SpliceGraph.py  SpliceGraphMask.py  SpliceGraphReads.py
majiq/rna_majiq/src/rna_majiq/moccasin/: CoverageModel.py  Factors.py  FactorsModel.py  __init__.py
majiq/rna_majiq/src/rna_majiq/mock/: splicegraph.py
majiq/rna_majiq/src/rna_majiq/voila/: DeltaPsiDataset.py  HeterogenDataset.py  mplSpliceGraph.py
majiq/rna_majiq/tests/: conftest.py  test_betamixture.py  test_deltapsi.py  test_scripts.py  test_splicegraph.py  test_stats.py
majiq/rna_majiq/tests/data/bam/: ENCSR005JBU.rep2.bam  ENCSR772DUM.rep1.bam  ENCSR772DUM.rep2.bam  ENCSR805TIZ.rep1.bam  ENCSR805TIZ.rep2.bam  ENCSR853AOV.rep2.bam
majiq/rna_majiq/tests/data/factors/: factors.tsv
majiq/rna_majiq/tests/data/gff3/: SRSF4.gff3
majiq/test/: test_majiq.py
moccasin/rna_moccasin/: CMakeLists.txt
moccasin/rna_moccasin/examples/: majiq_driver_example_nonpublished.py
moccasin/rna_moccasin/include/moccasin/: InferParams.cpp  InferParams.hpp  NumpyEigen.hpp  NumpyMaskToIndices.hpp
moccasin/rna_moccasin/src/: internals.cpp
moccasin/rna_moccasin/src/moccasin/: __init__.py  _version.py  constants.py  internals.pyi  logger.py  moccasin.py
moccasin/rna_moccasin/src/moccasin/_run/: moccasin.py
moccasin/rna_moccasin/testing/: adjustment_modelmat_df.pkl  linreg_modelmat_df.pkl
voila/: pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py
voila/guiapp/: build_linux.sh
voila/rna_voila/: classify.py  clin.py  config.py  constants.py  exceptions.py  filter.py  index.py  longreads.py  run_voila.py  splitter.py  tsv.py  vlsv.py  voila_log.py
voila/rna_voila/api/: __init__.py  licensing.py  matrix_hdf5.py  matrix_utils.py  model.sql  splice_graph.py  splice_graph_lr.py  splice_graph_netcdf.py  splice_graph_sql.py  splice_graph_zarr.py  view_matrix.py  view_matrix_hdf5.py  view_matrix_zarr.py  view_splice_graph.py
voila/rna_voila/api_static/: licensing.py
voila/rna_voila/classifier/: as_types.py  quantification_finder.py  tests.py  tests_expected_t_cells_1.py  tests_expected_t_cells_2.py  tests_expected_t_cells_3.py  tests_expected_t_cells_dpsi.py  training_writer.py  tsv_writer.py
voila/rna_voila/view/: datatables.py  deltapsi.py  forms.py  heterogen.py  multipsi.py  psi.py  splicegraph.py  ucsc_api.py  views.py
voila/rna_voila/view/static/css/: custom.css  index.css  lsv.css  multi_input.css  summary.css
voila/rna_voila/view/static/js/: common.js  copy_lsv.js  heatmap.js  lsv.js  plotOptions.js  splicegraphs.js  splicegraphtools.js  utils.js  violin.js
voila/rna_voila/view/templates/: base.html  base_index.html  base_summary.html  dpsi_index.html  dpsi_summary.html  het_index.html  het_summary.html  multipsi_index.html  multipsi_summary.html  psi_index.html  psi_summary.html  sg_summary.html
(+94 files in other folders)
