[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "3.0.0+scmfallback"

[tool.setuptools]
packages = []

[project]
name = "rna_majiq_meta"
version = "3.0.0"
requires-python = ">=3.8"
description = "Metapackage for installing MAJIQ/VOILA/MOCCASIN simultaneously"
readme = "README.md"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://majiq.biociphers.org"
Documentation = "https://biociphers.bitbucket.io/majiq-docs/"
