[metadata]
name = rna_majiq_meta
description = Metapackage for installing MAJIQ/VOILA simultaneously
keywords = rna, splicing, psi, splicegraph
author = BioCiphers Lab
author_email = majiq@biociphers.org
url = "https://biociphers.org"
license = 'No License'


[options]
zip_safe = False
python_requires = >= 3.8
