[metadata]
name = rna_majiq_meta
description = Metapackage for installing MAJIQ/VOILA simultaneously
keywords = rna, splicing, psi, splicegraph
author = BioCiphers Lab
author_email = majiq@biociphers.org
url = "https://biociphers.org"
license = 'No License'


[options]
zip_safe = False
python_requires = >= 3.8

[options.extras_require]
docs =
    sphinx_rtd_theme == 1.3.0
    ipython == 8.16.1
    ipykernel == 6.25.2
    sphinx == 3.1.0
    nbsphinx == 0.9.3
    pandoc == 2.3
