[build-system]
requires = [
    "scikit-build-core==0.11.1",
    "pybind11==2.13.6 ",
    "numpy==2.0.1",
    "setuptools_scm==8.2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "rna_majiq"
description = "Python/C++ module to analyze RNA splicing from RNA-seq experiments"
authors = [
    {name = "Joseph K Aicher", email = "josephkaicher@gmail.com"},
    {name = "Yoseph Barash", email = "yosephb@upenn.edu"},
]
keywords = [
    "MAJIQ",
    "alternative splicing",
    "bioinformatics",
]
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "numpy == 2.0.1",
    "xarray == 2024.6.0",
    "bottleneck == 1.4.0",
    "zarr == 2.18.3",
    "numcodecs == 0.13.1",
    "dask[complete] == 2024.7.1",
    "rna_moccasin",
    "scipy == 1.14.0",
]

[project.optional-dependencies]
plots = [
    "matplotlib == 3.10.1",
    "seaborn == 0.13.2",
]
docs = [
    "rna_majiq[plots]",
    "sphinx-autosummary-accessors == 2023.4.0",
    "sphinxcontrib-programoutput == 0.17",
    "sphinx_rtd_theme == 2.0.0",
    "ipython == 8.26.0",
    "ipykernel == 6.29.5",
    "jupyter-client == 8.6.2",
    "nbsphinx == 0.9.4",
]

[project.scripts]
majiq = "rna_majiq._run.majiq_main:main"
majiq-build = "rna_majiq._run.majiq_build:main"
majiq-coverage = "rna_majiq._run.majiq_coverage:main"
majiq-legacy = "rna_majiq._run.majiq_legacy:main"
majiq-mendelian = "rna_majiq._run.majiq_mendelian:main"
majiq-moccasin = "rna_majiq._run.moccasin:main"
majiq-quantify = "rna_majiq._run.majiq_quantify:main"
majiq-v3 = "rna_majiq._run.majiq_all:main"
nm-legacy-tsv = "rna_majiq._run.legacy_explode_tsv:main"
nm-shared-base-events = "rna_majiq._run.shared_base_events:main"

[tool.scikit-build]
# see https://scikit-build-core.readthedocs.io/en/latest/configuration.html
wheel.packages = ["rna_majiq/src/rna_majiq"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["rna_majiq/src/rna_majiq/_version.py"]  # generated files to include in sdist
build-dir = "rna_majiq/build/{wheel_tag}"
cmake.source-dir = "rna_majiq"
# arguments into cmake
cmake.args = [
    "-DCMAKE_EXPORT_COMPILE_COMMANDS=1",  # export compile_commands.json for clangd
]
# give more information
cmake.verbose = true
logging.level = "INFO"
# uncomment to set up debug flags
# cmake.build-type = "Debug"

[tool.setuptools_scm]
write_to = "majiq/rna_majiq/src/rna_majiq/_version.py"
root = ".."
fallback_version = "3.0.12+scmfallback"

[tool.ruff]
# same as black
line-length = 88
indent-width = 4

# assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["C408", "E203", "E501"]
exclude = [
    "doc",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
exclude = "doc"
files = "rna_majiq/src/rna_majiq/**/*.py"
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dask.*",
    "numpy.*",
    "zarr.*",
    "rna_voila.*",
    "pandas.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
testpaths = "rna_majiq/tests"
filterwarnings = [
    "error",
    "ignore:unclosed file:ResourceWarning",
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]
