[metadata]
name = rna_majiq
description = MAJIQ
keywords = rna, splicing, psi, splicegraph
author = BioCiphers Lab
author_email = majiq@biociphers.org
url = "https://biociphers.org"
license = 'No License'


[options]
zip_safe = False
include_package_data = True
install_requires =
    numpy >= 1.21
    scipy >= 1.4.1
    smmap2 == 2.0.5
    rna_voila
python_requires = >= 3.8
packages =
    find:

[options.entry_points]
console_scripts =
    majiq = rna_majiq.run_majiq:main

[options.package_data]
rna_majiq =
    data/*

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
show_error_codes = True

[mypy-numpy.*]
ignore_missing_imports = True
