[metadata]
name = rna_voila
description = VOILA -- visualization tool for MAJIQ
keywords = rna, splicing, psi, splicegraph
author = BioCiphers Lab
author_email = majiq@biociphers.org
url = "https://biociphers.org"
license = 'No License'


[options]
zip_safe = False
include_package_data = True
install_requires =
    Click >= 7.0
    cryptography == 41.0.5
    Flask == 1.1.4
    Flask-Session == 0.3.1
    Flask-WTF == 0.14.2
    gitdb2 == 2.0.6
    GitPython == 3.0.5
    gtfparse == 2.0.1
    gunicorn == 19.9.0
    h5py == 3.7.0
    intervaltree == 3.1.0
    itsdangerous == 1.1.0
    Jinja2 == 2.11.1
    MarkupSafe == 1.1.1
    networkx == 2.5
    numpy >= 1.21
    pandas == 2.0.3
    polars == 0.15.9
    psutil == 5.6.7
    pyarrow == 13.0.0
    requests == 2.31.0
    scipy >= 1.4.1
    six == 1.14.0
    smmap2 == 2.0.5
    tqdm == 4.66.1
    waitress == 1.1.0
    Werkzeug == 0.16.0
    WTForms == 2.2.1
python_requires = >= 3.8
packages =
    rna_voila
    rna_voila.api
    rna_voila.view
    rna_voila.utils
    rna_voila.view
    rna_voila.classifier

[options.entry_points]
console_scripts =
    voila = rna_voila.run_voila:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
show_error_codes = True

[mypy-numpy.*]
ignore_missing_imports = True
