[metadata]
name = rna_voila
description = VOILA -- visualization tool for MAJIQ
keywords = rna, splicing, psi, splicegraph
author = BioCiphers Lab
author_email = majiq@biociphers.org
url = "https://biociphers.org"
license = 'No License'


[options]
zip_safe = False
include_package_data = True
install_requires =
    Click
    cryptography
    Flask
    Flask-Session
    Flask-WTF
    gitdb2
    GitPython
    gtfparse
    gunicorn
    h5py
    intervaltree
    itsdangerous
    Jinja2
    MarkupSafe
    networkx
    numpy
    pandas
    polars
    psutil
    pyarrow == 16.1.0
    requests
    scipy
    six
    smmap2
    tqdm
    waitress
    Werkzeug
    WTForms
python_requires = >= 3.8
packages =
    rna_voila
    rna_voila.api
    rna_voila.view
    rna_voila.utils
    rna_voila.view
    rna_voila.classifier

[options.entry_points]
console_scripts =
    voila = rna_voila.run_voila:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
show_error_codes = True

[mypy-numpy.*]
ignore_missing_imports = True
