[metadata]
name = rna_voila
description = VOILA -- visualization tool for MAJIQ
keywords = rna, splicing, psi, splicegraph
author = BioCiphers Lab
author_email = majiq@biociphers.org
url = "https://biociphers.org"
license = 'No License'


[options]
zip_safe = False
include_package_data = True
install_requires =
    Click == 8.1.7
    cryptography == 43.0.0
    Flask == 3.0.3
    Flask-Session == 0.8.0
    Flask-WTF == 1.2.1
    gitdb2 == 4.0.2
    GitPython == 3.1.43
    gtfparse == 2.0.1
    gunicorn == 23.0.0
    h5py == 3.11.0
    intervaltree == 3.1.0
    itsdangerous == 2.2.0
    Jinja2 == 3.1.4
    MarkupSafe == 2.1.5
    networkx == 3.3
    numpy == 2.0.1
    pandas == 2.2.2
    polars == 1.2.1
    psutil == 6.0.0
    pyarrow == 16.1.0
    requests == 2.32.3
    scipy == 1.14.0
    six == 1.16.0
    smmap2 == 3.0.1
    tqdm == 4.66.4
    waitress == 3.0.0
    Werkzeug == 3.0.3
    WTForms == 3.1.2
python_requires = >= 3.8
packages =
    rna_voila
    rna_voila.api
    rna_voila.api_static
    rna_voila.view
    rna_voila.utils
    rna_voila.view
    rna_voila.classifier

[options.entry_points]
console_scripts =
    voila = rna_voila.run_voila:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
show_error_codes = True

[mypy-numpy.*]
ignore_missing_imports = True
